themes/_administration/style.css
/*
 * Style for Admistration pages
 *
 * webtrees: Web based Family History software
 * Copyright (C) 2011 webtrees development team.
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 *
 * $Id$
 */

/* Add a permanent scrollbar, to prevent "flickering" when hover effects lengthen page */
html { overflow-y:scroll; }

/* general styles */
body {font-family:Trebuchet MS, Tahoma, Verdana, Arial, sans-serif; font-size:12px; margin:10px; min-width:800px;}
input.ui-button { padding:1px 3px;}
input, textarea { color:black; padding-left:3px; padding-right:0px; }
html[dir='rtl'] input, html[dir='rtl'] textarea {padding-right: 3px; padding-left: 0px;}

fieldset {margin:8px 8px 4px 8px;}
legend {font-style:italic; font-weight:bold;	padding:0 5px 5px; align:top;}
img {border:none; vertical-align:middle;}
h3 {margin:0}
h4 {margin:5px 3px; font-weight:normal; font-style:italic;}
td {vertical-align:top;}
.icon {border:none;	padding-left:0pt;padding-right:5pt;}
.warning, .error, .red {font-weight:bold; color:red;}
.accepted, a.accepted {font-weight:bold; color:green;}
.center {text-align:center;}
.ltr {text-align:left;}
.rtl {text-align:right;}
.nowrap {white-space:nowrap;}
.indent {padding-left:15px;}
html[dir='rtl'] .indent {padding-right:15px;}
.parentdeath {border:thin solid red; padding:1px;}
.submenu { background-color:#EEE; border:thin solid #AAA; padding: 3px;}
.rela { opacity : 0.4;}

/* jQuery styling over-rides */
.ui-widget-content a {text-decoration:none;}
.ui-widget-content a.current {color:#E17009; font-weight:bold;}
.ui-widget-content a:hover, .DataTables_sort_wrapper:hover {color:red; cursor:hand; cursor:pointer;}
.ui-widget-header {padding:5px;}
.ui-progressbar-value {height:60%!important;}
.ui-accordion .ui-accordion-content-active {display:block;}
.css_right {float:right;}
html[dir='rtl'] .css_right {float:left;}
html[dir='rtl'] input {padding-right: 3px; padding-left: 0px;}

/* jEditable styling over-rides */
.editable {width:100%; display:block}
.editable:hover {color:red; cursor:pointer; cursor:hand;} /* both cursors needed for cross-browser support */
.editable input, select {padding:0;}
.editable input {font-size: 90%; height:18px !important;}
.editable button {font-size:85%; padding:0;}

/* jQuery.datatable styling over-rides */
.odd {background-color:#dfd;}
.even {background-color:#efe;}
.fg-button {padding:2px 6px;}
.dataTables_paginate   {float:left;}
.dataTables_processing {float:left;}
.dataTables_filter  {float:right;}
.dataTables_info {float:left;}
.dataTables_length {float:right;}
.dataTables_length select, .dataTables_filter input {font-size:11px; padding:1px;}
html[dir='rtl'] .dataTables_paginate {float:right;}
html[dir='rtl'] .dataTables_processing {float:right;}
html[dir='rtl'] .dataTables_filter  {float:left;}
html[dir='rtl'] .dataTables_info {float:right}
html[dir='rtl'] .dataTables_length {float:left;}

/* Drag-n-drop sorting for modules, etc. */
.sortme {cursor:move;}

/* Page Help links */
#page_help{margin:-5px 0 15px; text-align:right;}
html[dir='rtl'] #page_help{text-align:left;}
#page_help a img{display:none; height:24px; margin:-5px; padding:0; width:24px;}

/* HEADER */
#admin_head {position:relative; height:70px; margin-bottom:10px; min-width:1070px; z-index:1000;}
#title {position:absolute; left:47%; top:20px; font-size:18px; font-weight:bold;}
#info {position:absolute; right:10px; bottom:0; text-align:right;}
html[dir='rtl'] #info {right:auto; left:10px; text-align:left;}
#links {position:absolute; left:10px; bottom:0; display:inline; margin-bottom:5px; white-space:nowrap;}
html[dir='rtl'] #links {left:auto; right:10px; *left:0px;/* - IE7 hack */}
#links li {display:inline; position:relative;}
#links li ul {display:none; position:absolute; left:0px; top:1.2em; background:url("jquery/images/ui-bg_fine-grain_10_eceadf_60x60.png") repeat scroll 50% 50% #ECEADF; border:1px solid #D9D6C4;z-index:999;}
html[dir='rtl'] #links li ul {left:auto; right:0px;}
#links li ul li {display:block; padding:0 5px; text-align:left;}
 html[dir='rtl'] #links li ul li {text-align:right;}
#links, #links li ul {list-style:none; margin:0; padding:1px;}
#links li:hover > ul {display:block;}

/* SIDE and CONTENT panels */
#admin_menu, #admin_content {min-height:580px;}
#admin_content {min-width:830px;}

/* SIDE MENU */
#admin_menu {
	padding:10px 0 10px 5px;
	top: 92px; left: 10px; right: auto; 
	width:200px; 
	float:left; 
	position:absolute; 
	color:#2E6E9E; 
	white-space:nowrap; 
	overflow:hidden;
	*position:relative;  /* - IE7 hack */
}
html[dir='rtl'] #admin_menu {
	top: 92px; left: auto; right: 10px; 
	padding:10px 5px 10px 0;
	float:right;
}

#admin_menu ul {
	list-style:none outside none;
	margin:0 0 0 -30px;
	*margin:0 0 0 10px;  /* - IE7 hack */
}
html[dir='rtl'] #admin_menu ul {
	margin:0 -30px 0 0;
	*margin:0 10px 0 0;  /* - IE7 hack */
}

#admin_menu li ul {
	margin:0 0 0 -20px;
	*margin:0 0 0 20px;  /* - IE7 hack */
}
html[dir='rtl'] #admin_menu li ul {
	margin:0 -20px 0 0;
	*margin:0 20px 0 0;  /* - IE7 hack */
}

#admin_menu li span {font-style:italic;}
#admin_menu ul {list-style:none outside none;}
#admin_menu ul li ul, html[dir='rtl'] #admin_menu li ul {
	*margin-top:-20px;  /* - IE7 hack */
}

/* CONTENT */
#admin_content {margin:0 0 0 220px; padding:10px;}
html[dir='rtl'] #admin_content {margin:0 220px 0 0;}
/* ... */

